--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   background-color: #d3f8f4;
@@ -13,8 +13,8 @@
   display: flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin: 20px;
 }
 
@@ -53,8 +53,7 @@
 }
 
 .main {
-  width: 800px;
-  height: 100px;
+  width: auto;
 }
 
 .main__balls {
@@ -68,7 +67,8 @@
   font-weight: bold;
 }
 
-.main__game {
+.main__game,
+.main__balls {
   padding: 10px;
   border-style: solid;
   border-width: 7px;
@@ -83,14 +83,15 @@
   display: flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
-.main__game--ball {
+.main__game--ball,
+.main__balls--ball {
   width: 60px;
   height: 60px;
   text-align: center;
