--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,8 @@
   font-size: 20px;
   font-weight: bold;
 }
-.main__game {
+.main__game,
+.main__balls {
   padding: 10px;
   border-style: solid;
   border-width: 7px;
@@ -60,7 +61,8 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.main__game--ball {
+.main__game--ball,
+.main__balls--ball {
   width: 60px;
   height: 60px;
   text-align: center;
