--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,7 @@
 }
 .main__btn {
   display: flex;
+  justify-content: flex-end;
 }
 .main__title {
   font-size: 24px;
@@ -74,7 +75,7 @@
   width: auto;
   /* height: 300px; */
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
 }
 
@@ -91,7 +92,7 @@
 }
 .main__balls {
   padding: 10px;
-  height: 200px;
+  height: auto;
   /* border-style: solid;
   border-width: 7px;
   border-color: #15c3b1; */
