--- a/styles/main.css
+++ b/styles/main.css
@@ -6,18 +6,19 @@
 .header {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .header__title {
-  text-align: center;
+  width: 500px;
 }
 .main {
   border-color: green;
   background-color: #d3f8f4;
-  margin: 0 50px 50px 50px;
+  margin: 0 100px 50px 100px;
 }
 .main__btn {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row-reverse;
 }
 .main__title {
   font-size: 24px;
