--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* background-color: grey; */
 }
 body {
   background: #fffde7;
@@ -16,13 +15,11 @@ body {
   width: 300px;
 }
 .main {
-  border-color: green;
   margin: 10px;
 }
 .main__btn {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
+  display: flex;
+  justify-content: space-between;
 }
 /* .main__title {
   font-size: 24px;
@@ -83,8 +80,6 @@ body {
   padding-top: 25px;
 }
 .main__container-game {
-  /* border-color: crimson;
-  border-style: solid; */
   border-width: 7px;
   width: 50%;
   height: 100%;
@@ -102,13 +97,12 @@ body {
   background: white;
   outline-style: solid;
   outline-color: grey;
-  color: #15c3b1;
+  color: #fe8b0a;
 }
 .main__container-balls {
   height: auto;
   width: 50%;
   margin: 15px 20px 20px 20px;
-  font-family: 'Indie Flower';
   font-size: 20px;
   font-weight: bold;
   display: flex;
@@ -128,6 +122,6 @@ body {
   padding-top: 4px;
 }
 .inside-card {
-  background-color: #15c3b1;
+  background-color: #fe8b0a;
   color: #fffde7;
 }
